--- a/RESTfulBlogApp/package.json
+++ b/RESTfulBlogApp/package.json
@@ -14,7 +14,7 @@
     "express": "^4.16.2",
     "express-sanitizer": "^1.0.2",
     "method-override": "^2.3.10",
-    "mongoose": "^4.13.7",
+    "mongoose": "^5.0.0-rc2",
     "nodemon": "^1.14.11"
   }
 }
